--- a/t7home/res/layout/activity_main.xml
+++ b/t7home/res/layout/activity_main.xml
@@ -2,77 +2,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textViewUserdata"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_data"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/editTextUsername"
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:hint="@string/username_hint" >
+        android:background="@color/subtitle_background"
+        android:text="@string/logon_subtitle"
+        android:paddingLeft="@dimen/subtitle_paddingX"
+        android:paddingRight="@dimen/subtitle_paddingX"
+        android:paddingTop="@dimen/subtitle_paddingY"
+        android:paddingBottom="@dimen/subtitle_paddingY"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/subtitle_text" />
 
-        <requestFocus />
-    </EditText>
-
-    <EditText
-        android:id="@+id/editTextPassword"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/password_hint"
-        android:inputType="textPassword" />
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <TextView
-        android:id="@+id/textViewIpAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:labelFor="@+id/editTextIpAddress"
-        android:text="@string/ip_address"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        <TextView
+            android:id="@+id/textViewUserdata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/user_data"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <EditText
-        android:id="@+id/editTextIpAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:digits="0123456789."
-        android:ems="10"
-        android:inputType="number|numberDecimal" >
-    </EditText>
+        <EditText
+            android:id="@+id/editTextUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:ems="10"
+            android:hint="@string/username_hint" >
 
-    <TextView
-        android:id="@+id/textViewIpAddressExplanation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="@string/ip_address_explanation"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+            <requestFocus />
+        </EditText>
 
-    <CheckBox
-        android:id="@+id/checkBoxKeepInMind"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="@string/keep_in_mind" />
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/buttonLogon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="@string/logon" />
+        <TextView
+            android:id="@+id/textViewIpAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:labelFor="@+id/editTextIpAddress"
+            android:text="@string/ip_address"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <EditText
+            android:id="@+id/editTextIpAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:digits="0123456789."
+            android:ems="10"
+            android:inputType="number|numberDecimal" >
+        </EditText>
+
+        <TextView
+            android:id="@+id/textViewIpAddressExplanation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/ip_address_explanation"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <CheckBox
+            android:id="@+id/checkBoxKeepInMind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:text="@string/keep_in_mind" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/buttonLogon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:onClick="onLogon"
+            android:text="@string/logon" />
+    </LinearLayout>
 
 </LinearLayout>
