--- a/t7home/res/layout/activity_main.xml
+++ b/t7home/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -56,7 +56,7 @@
             android:id="@+id/textViewIpAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="36dp"
             android:labelFor="@+id/editTextIpAddress"
             android:text="@string/ip_address"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -83,7 +83,7 @@
             android:id="@+id/checkBoxKeepInMind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="36dp"
             android:text="@string/keep_in_mind" />
 
         <Space
@@ -95,7 +95,7 @@
             android:id="@+id/buttonLogon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="36dp"
             android:onClick="onLogon"
             android:text="@string/logon" />
     </LinearLayout>
