--- a/t7home/res/menu/rooms.xml
+++ b/t7home/res/menu/rooms.xml
@@ -4,6 +4,7 @@
         android:id="@+id/refresh_item"
         android:orderInCategory="20"
         android:showAsAction="always"
+        android:icon="@drawable/ic_refresh"
         android:title="@string/rooms_refresh_menu_item"/>
     <item
         android:id="@+id/about_item"
