--- a/t7home/res/menu/rooms.xml
+++ b/t7home/res/menu/rooms.xml
@@ -7,6 +7,12 @@
         android:icon="@drawable/ic_refresh"
         android:title="@string/rooms_refresh_menu_item"/>
     <item
+        android:id="@+id/logout_item"
+        android:orderInCategory="90"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_logout"
+        android:title="@string/rooms_logout_menu_item"/>
+    <item
         android:id="@+id/about_item"
         android:orderInCategory="100"
         android:showAsAction="never"
