--- a/t7home/res/layout/rooms_list_header.xml
+++ b/t7home/res/layout/rooms_list_header.xml
@@ -4,15 +4,29 @@
     android:layout_height="match_parent"
     android:background="@color/subtitle_background"
     android:padding="5dip" >
-
-    <TextView
-        android:id="@+id/textViewRoomsListHeader"
-        android:layout_width="wrap_content"
+    
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/rooms_subtitle"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/subtitle_text" />
+        android:background="@color/subtitle_background"
+        android:paddingLeft="@dimen/subtitle_paddingX" >
 
+        <ImageView
+            android:id="@+id/imageViewRoomsListHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/logon_subtitle"
+            android:src="@drawable/ic_room" />
+
+        <TextView
+            android:id="@+id/textViewRoomsListHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/subtitle_paddingX"
+            android:paddingRight="@dimen/subtitle_paddingX"
+            android:text="@string/rooms_subtitle"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/subtitle_text" />
+    </LinearLayout>
+    
 </RelativeLayout>
