--- a/t7home/res/layout/rooms_list_header.xml
+++ b/t7home/res/layout/rooms_list_header.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:contentDescription="@string/logon_subtitle"
-            android:src="@drawable/ic_room" />
+            android:src="@drawable/ic_rooms" />
 
         <TextView
             android:id="@+id/textViewRoomsListHeader"
