--- a/t7home/res/values/colors.xml
+++ b/t7home/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="subtitle_background">#0066AA</color>
     <color name="subtitle_text">#F2F9FF</color>
     
+    <color name="row_header_background">#9cc7e1</color>
+    <color name="row_header_text">#0066AA</color>
+    
 </resources>
