--- a/t7home/res/layout/activity_main.xml
+++ b/t7home/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:contentDescription="@string/logon_subtitle"
-            android:src="@drawable/ic_logout" />
+            android:src="@drawable/ic_login" />
 
         <TextView
             android:id="@+id/textViewLogonSubTitle"
