--- a/t7home/res/values/colors.xml
+++ b/t7home/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="subtitle_text">#F2F9FF</color>
     
     <color name="row_header_background">#9cc7e1</color>
-    <color name="row_header_text">#0066AA</color>
+    <color name="row_header_text">#2980b9</color>
     
 </resources>
