--- a/t7home/res/layout/temperature_humidity_device_row.xml
+++ b/t7home/res/layout/temperature_humidity_device_row.xml
@@ -4,18 +4,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textViewRoomRowHeader"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/row_header_background"
-        android:paddingBottom="@dimen/room_row_paddingY"
-        android:paddingLeft="@dimen/room_row_paddingX"
-        android:paddingRight="@dimen/room_row_paddingX"
-        android:paddingTop="@dimen/room_row_paddingY"
-        android:text="@string/heater"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/row_header_text" />
+        android:paddingLeft="@dimen/subtitle_paddingX" >
+
+        <ImageView
+            android:id="@+id/imageViewRoomListHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/heater"
+            android:src="@drawable/ic_s_blue_heating" />
+
+        <TextView
+            android:id="@+id/textViewRoomRowHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/room_row_paddingY"
+            android:paddingLeft="@dimen/room_row_paddingX"
+            android:paddingRight="@dimen/room_row_paddingX"
+            android:paddingTop="@dimen/room_row_paddingY"
+            android:text="@string/heater"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/row_header_text" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -120,7 +133,7 @@
         android:id="@+id/seekBarPresetTemperature"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -150,5 +163,5 @@
             android:text="@string/dummy_temperature_value"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
-    
+
 </LinearLayout>
