--- a/t7home/res/layout/temperature_humidity_device_row.xml
+++ b/t7home/res/layout/temperature_humidity_device_row.xml
@@ -98,7 +98,40 @@
         android:layout_marginBottom="@dimen/room_row_value_paddingY"
         android:layout_marginTop="@dimen/room_row_value_paddingY"
         android:background="@color/subtitle_background" />
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/room_row_value_paddingY"
+        android:paddingLeft="@dimen/room_row_paddingX"
+        android:paddingRight="@dimen/room_row_paddingX"
+        android:paddingTop="@dimen/room_row_value_paddingY" >
 
+        <TextView
+            android:id="@+id/textViewRoomModus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/room_modus"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Switch
+            android:id="@+id/switchLocked"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:enabled="false"
+            android:textOn="@string/on"
+            android:textOff="@string/off"
+            android:text="@string/empty" />
+
+    </LinearLayout>
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
